--- a/_posts/2012-10-07-test.md
+++ b/_posts/2012-10-07-test.md
@@ -1,16 +1,17 @@
 ---
 layout: post
-category : lessons
+category : test
 tags : [intro, beginner, jekyll, tutorial]
 ---
 {% include JB/setup %}
 
-This is a quick test of the blogging feature.
+This is a test post
 
 
 {% highlight r %}
+par(mar = c(2.5, 2.5, 0.5, 0.1), omi = c(0, 0, 0, 0))
 filled.contour(volcano)
 {% endhighlight %}
 
-![center](/figs/2012-10-07-test/fig2.png) 
+![center](//home/erichare/Software/R/Website/_posts/figs/2012-10-07-test/testfig.png) 
 
