Beef up blog post because everyone else is making me jealous

--- a/_posts/2014-01-14-reshape.md
+++ b/_posts/2014-01-14-reshape.md
@@ -12,3 +12,22 @@ library(reshape2)
 {% endhighlight %}
 
 In this paper, Hadley describes his reshape package. He explains that reshape came about because of frustrating experiences with some of the built-in R functions used to shape the data, such as aggregate. He explains the concept of “melting” data, which means to change the form of the data such that there are only id columns, a variable column, and a single value column. Once the dataset is “molten”, it can be cast into a particular shape by specifying a formula as column_vars ~ row_vars. There are several reasons one might want to cast the data into another shape. In the french fries dataset, for example, there are several columns representing the desirability of a particular type of french fries. By melting this data so that the type of french fry is the “variable” column, we can then cast subject by time to more easily investigate how many missing values exist for a particular subject at a particular time.
+
+An example of using melting and reshaping is given below. Consider the airquality dataset
+
+{% highlight r %}
+head(airquality)
+{% endhighlight %}
+
+We first melt the data using the id variables Month and Day
+
+{% highlight r %}
+airquality.melt <- melt(airquality, id.vars = c("Month", "Day"))
+head(airquality.melt)
+{% endhighlight %}
+
+Finally, we can cast the data by month and day, checking that there are 4 observations for each day in the dataset. Notice that a couple of the cells are empty, because the particular months (June and September) do not have 31 days.
+
+{% highlight r %}
+dcast(airquality.melt, Month ~ Day, length)
+{% endhighlight %}
