Clean up slightly

--- a/_posts/2014-01-14-reshape.md
+++ b/_posts/2014-01-14-reshape.md
@@ -23,10 +23,9 @@ We first melt the data using the id variables Month and Day
 
 {% highlight r %}
 airquality.melt <- melt(airquality, id.vars = c("Month", "Day"))
-head(airquality.melt)
 {% endhighlight %}
 
-Finally, we can cast the data by month and day, checking that there are 4 observations for each day in the dataset. Notice that a couple of the cells are empty, because the particular months (June and September) do not have 31 days.
+Finally, we can cast the data by month and day, checking that there are four observations for each day in the dataset. If you view the dataset, you will notice that a couple of the cells are empty, because the particular months (June and September) do not have 31 days. Every other day contains four observations as expected.
 
 {% highlight r %}
 dcast(airquality.melt, Month ~ Day, length)
