--- a/_posts/2014-01-18-ddply.md
+++ b/_posts/2014-01-18-ddply.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "STAT 585X - Split-Apply-Combine"
 date:   2014-01-18 13:05:31
-categories: stats
+categories: blog
 ---
 
 (This is a blog post made for the first reading assignment in STAT 585X, in reference to http://www.jstatsoft.org/v40/i01/paper)
