--- a/_posts/2014-01-14-reshape.md
+++ b/_posts/2014-01-14-reshape.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "STAT 585X - Reshape"
 date:   2014-01-14 14:44:58
-categories: stats
+categories: blog
 ---
 
 (This is a blog post made for the first reading assignment in STAT 585X, in reference to http://www.jstatsoft.org/v21/i12/paper)
