New blog for stat 585x

--- a/_posts/2014-01-18-ddply.md
+++ b/_posts/2014-01-18-ddply.md
@@ -5,7 +5,7 @@ date:   2014-01-18 13:05:31
 categories: blog
 ---
 
-(This is a blog post made for the first reading assignment in STAT 585X, in reference to http://www.jstatsoft.org/v40/i01/paper)
+(This is a blog post made for the second reading assignment in STAT 585X, in reference to http://www.jstatsoft.org/v40/i01/paper)
 
 {% highlight r %}
 library(plyr)
