--- a/cv.Rmd
+++ b/cv.Rmd
@@ -9,7 +9,7 @@ title: "CV"
 author: Eric Hare
 
 jobtitle: "Chief Data Scientist at Omni Analytics Group"
-address: "2405 Grant Cir, Ames, IA, 50010"
+address: "2911 Charlotte Ct, Unit 103, Ames, IA, 50014"
 fontawesome: yes
 email: eric@omnianalytics.io
 github: erichare
@@ -48,7 +48,7 @@ Bachelor of Science in Computer Engineering, Cum Laude \hfill Received June 2012
 
 Hare, E., Hofmann, H., and Carriquiry, A., **A Modern Bullet Matching Database and Web Application**. In Progress
 
-Hare, E., Hofmann, H., and Carriquiry, A., **Algorithmic Approaches to Bullet Matching with an Emphasis on the Degraded Land Case**. In Progress
+Hare, E., Hofmann, H., and Carriquiry, A., **Algorithmic Approaches to Match Degraded Land Impressions**. Submitted to Law, Probability, and Risk
 
 Hare, E., Hofmann, H., and Carriquiry, A., **Automatic Matching of Bullet Lands**. Accepted by the Annals of Applied Statistics
 
