One more small fix

--- a/cv.Rmd
+++ b/cv.Rmd
@@ -82,7 +82,7 @@ Kaplan, A., and Hare, E., **Putting Down Roots: A Graphical Exploration of Commu
 
 Hare, E., Kaplan, A., Hofmann, H., and Cook, D., **Can you buy a president? Politics after the Tillman Act**. Poster Presentation, Joint Statistical Meetings, Aug 3-8, 2013, Montreal, QC
 
-Kaplan, A., and Hare, E., Putting Down Roots: **A Graphical Exploration of Community Attachment**. Poster Presentation, Joint Statistical Meetings, Aug 3-8, 2013, Montreal, QC
+Kaplan, A., and Hare, E.,  **Putting Down Roots: A Graphical Exploration of Community Attachment**. Poster Presentation, Joint Statistical Meetings, Aug 3-8, 2013, Montreal, QC
 
 # Awards
 
